Update text 'available with version 2 and version 3 (FHIR R4)'